packages/tree-sitter/grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement)
    ),

    export_statement: $ => choice(
      seq(
        'export',
        choice(
          seq('*', $.from_clause),
          seq($.namespace_export, $.from_clause),
          seq($.export_clause, optional($.from_clause)),
          seq('default', choice(
            $.declaration,
            seq($.expression, $._semicolon)
          )),
          $.declaration
        ),
        $._semicolon
      ),
      seq(
        'export',
        'type',
        choice(
          seq('*', $.from_clause),
          seq($.export_clause, optional($.from_clause))
        ),
        $._semicolon
      )
    ),

    export_clause: $ => seq(
      '{',
      commaSep($.export_specifier),
      optional(','),
      '}'
    ),

    export_specifier: $ => seq(
      optional('type'),
      field('name', $.identifier),
      optional(seq('as', field('alias', $.identifier)))
    ),

    import_statement: $ => seq(
      'import',
      optional('type'),
      choice(
        seq($.import_clause, $.from_clause),
        $.string
      ),
      optional($._semicolon)
    ),

    import_clause: $ => choice(
      $.namespace_import,
      $.named_imports,
      seq(
        $.identifier,
        optional(seq(',', choice($.namespace_import, $.named_imports)))
      )
    ),

    from_clause: $ => seq('from', $.string),

    namespace_import: $ => seq('*', 'as', $.identifier),

    named_imports: $ => seq(
      '{',
      commaSep($.import_specifier),
      optional(','),
      '}'
    ),

    import_specifier: $ => seq(
      optional('type'),
      field('name', choice($.identifier, $.string)),
      optional(seq('as', field('alias', $.identifier)))
    ),

    expression_statement: $ => seq(
      $.expression,
      $._semicolon
    ),

    variable_declaration: $ => seq(
      choice('var', 'let', 'const'),
      commaSep1($.variable_declarator),
      $._semicolon
    ),

    variable_declarator: $ => seq(
      field('name', choice($.identifier, $._destructuring_pattern)),
      optional($._type_annotation),
      optional($.initializer)
    ),

    lexical_declaration: $ => seq(
      choice('let', 'const'),
      commaSep1($.variable_declarator),
      $._semicolon
    ),

    statement_block: $ => seq(
      '{',
      repeat($.statement),
      '}'
    ),

    for_of_statement: $ => seq(
      'for',
      optional('await'),
      '(',
      choice(
        seq(choice('let', 'const', 'var'), choice($._destructuring_pattern, $.identifier)),
        $.identifier
      ),
      'of',
      field('right', $.expression),
      optional(seq(';', 'index', $.identifier)),
      optional(seq(';', 'key', $.expression)),
      ')',
      field('body', $.statement)
    ),

    return_statement: $ => seq(
      'return',
      optional($.expression),
      $._semicolon
    ),

    component_declaration: $ => prec.left(PREC.DECLARATION, seq(
      optional('export'),
      optional('default'),
      'component',
      optional(field('name', $.identifier)),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.formal_parameters),
      optional($._type_annotation),
      field('body', $.component_body)
    )),

    fragment_declaration: $ => prec.left(PREC.DECLARATION, seq(
      optional('export'),
      optional('default'),
      'fragment',
      optional(field('name', $.identifier)),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.formal_parameters),
      optional($._type_annotation),
      field('body', $.component_body)
    )),

    component_body: $ => seq(
      '{',
      repeat($.component_statement),
      '}'
    ),

    style_element: $ => seq(
      '<style',
      repeat($._jsx_attribute),
      '>',
      optional(alias($._style_content, $.raw_text)),
      '</style>'
    ),

    _style_content: $ => /[^<]+/,

    function_declaration: $ => seq(
      optional('async'),
      'function',
      optional('*'),
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.formal_parameters),
      optional($._type_annotation),
      field('body', $.statement_block)
    ),

    class_declaration: $ => seq(
      optional('abstract'),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional($.class_heritage),
      field('body', $.class_body)
    ),

    class_body: $ => seq(
      '{',
      repeat(choice(
        $.method_definition,
        $.field_definition,
        $.class_static_block,
        ';'
      )),
      '}'
    ),

    field_definition: $ => seq(
      repeat(choice('static', 'readonly', 'declare', 'abstract', 'override')),
      field('property', $.property_name),
      optional('?'),
      optional($._type_annotation),
      optional($.initializer),
      $._semicolon
    ),

    method_definition: $ => seq(
      repeat(choice('static', 'async', 'readonly', 'abstract', 'override')),
      optional(choice('get', 'set', '*')),
      field('name', $.property_name),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.formal_parameters),
      optional($._type_annotation),
      field('body', $.statement_block)
    ),

    formal_parameters: $ => seq(
      '(',
      optional(commaSep($._formal_parameter)),
      optional(','),
      ')'
    ),

    _formal_parameter: $ => choice(
      $.required_parameter,
      $.rest_parameter
    ),

    required_parameter: $ => seq(
      field('pattern', choice($.identifier, $._destructuring_pattern)),
      optional('?'),
      optional($._type_annotation),
      optional($.initializer)
    ),

    _destructuring_pattern: $ => choice(
      $.object_pattern,
      $.array_pattern
    ),

    object_pattern: $ => seq(
      '{',
      commaSep(choice(
        $.pair_pattern,
        $.rest_pattern,
        $.object_assignment_pattern,
        $.shorthand_property_identifier_pattern
      )),
      optional(','),
      '}'
    ),

    pair_pattern: $ => seq(
      field('key', $.property_name),
      ':',
      field('value', choice($.pattern, $.assignment_pattern))
    ),

    rest_pattern: $ => seq(
      '...',
      $.identifier
    ),

    array_pattern: $ => seq(
      '[',
      commaSep(choice(
        $.pattern,
        $.assignment_pattern,
        $.rest_pattern
      )),
      optional(','),
      ']'
    ),

    server_block: $ => seq(
      '#server',
      '{',
      repeat($.statement),
      '}'
    ),

    unbox_expression: $ => prec.left(PREC.UNBOX, seq(
      '@',
      choice(
        $.identifier,
        $.member_expression,
        $.subscript_expression,
        $.parenthesized_expression
      )
    )),

    reactive_object: $ => seq(
      '#{',
      commaSep(choice(
        $.pair,
        $.spread_element,
        $.method_definition,
        $.shorthand_property_identifier,
        $._reserved_identifier
      )),
      optional(','),
      '}'
    ),

    reactive_array: $ => seq(
      '#[',
      commaSep(choice($.expression, $.spread_element)),
      optional(','),
      ']'
    ),

    await_expression: $ => prec.left(PREC.CALL, seq(
      'await',
      $.expression
    )),

    augmented_assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice(
        $.identifier,
        $.member_expression,
        $.subscript_expression,
        $.unbox_expression
      )),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=',
        '>>=', '>>>=', '<<=', '**=', '&&=', '||=', '??='
      )),
      field('right', $.expression)
    )),

    binary_expression: $ => choice(
      ...[
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['??', PREC.OR],
        ['>>', PREC.TIMES],
        ['>>>', PREC.TIMES],
        ['<<', PREC.TIMES],
        ['&', PREC.AND],
        ['^', PREC.OR],
        ['|', PREC.OR],
        ['+', PREC.PLUS],
        ['-', PREC.PLUS],
        ['*', PREC.TIMES],
        ['/', PREC.TIMES],
        ['%', PREC.TIMES],
        ['**', PREC.EXP],
        ['<', PREC.REL],
        ['<=', PREC.REL],
        ['==', PREC.REL],
        ['===', PREC.REL],
        ['!=', PREC.REL],
        ['!==', PREC.REL],
        ['>=', PREC.REL],
        ['>', PREC.REL],
        ['instanceof', PREC.REL],
        ['in', PREC.REL],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression)
        ))
      )
    ),

    update_expression: $ => prec.left(PREC.INC, choice(
      seq(
        field('argument', $.expression),
        field('operator', choice('++', '--'))
      ),
      seq(
        field('operator', choice('++', '--')),
        field('argument', $.expression)
      )
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', choice(
        $.expression,
        $.import
      )),
      field('arguments', choice($.arguments, $.template_string))
    )),

    member_expression: $ => prec(PREC.MEMBER, seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', '?.'),
      field('property', choice($.identifier, $.private_property_identifier))
    )),

    arguments: $ => seq(
      '(',
      commaSep(choice($.expression, $.spread_element)),
      optional(','),
      ')'
    ),

    arrow_function: $ => seq(
      optional('async'),
      choice(
        field('parameter', $.identifier),
        field('parameters', $.formal_parameters)
      ),
      optional($._type_annotation),
      '=>',
      field('body', choice(
        $.expression,
        $.statement_block
      ))
    ),

    pair: $ => prec(PREC.OBJECT, seq(
      field('key', $.property_name),
      ':',
      field('value', $.expression)
    )),

    spread_element: $ => seq(
      '...',
      $.expression
    ),

    shorthand_property_identifier_pattern: $ => alias($.identifier, $.shorthand_property_identifier),

    template_string: $ => seq(
      '`',
      repeat(choice(
        $._template_chars,
        $.template_substitution
      )),
      '`'
    ),

    template_substitution: $ => seq(
      '${',
      $.expression,
      '}'
    ),

    jsx_element: $ => seq(
      field('open_tag', $.jsx_opening_element),
      repeat(field('children', $._jsx_child)),
      field('close_tag', $.jsx_closing_element)
    ),

    jsx_opening_element: $ => seq(
      '<',
      optional('@'),
      field('name', $.jsx_element_name),
      repeat(field('attribute', $._jsx_attribute)),
      '>'
    ),

    jsx_closing_element: $ => seq(
      '</',
      optional('@'),
      field('name', $.jsx_element_name),
      '>'
    ),

    // In Ripple, namespaced TSX-compat elements like <tsx:react> cannot be self-closing
    // so we disallow jsx_namespace_name here by using a narrowed name rule.
    jsx_self_closing_element: $ => seq(
      '<',
      optional('@'),
      field('name', $.jsx_non_namespaced_element_name),
      repeat(field('attribute', $._jsx_attribute)),
      '/>'
    ),

    jsx_member_name: $ => seq(
      // base identifier (no '@' here because an optional '@' may precede the tag itself)
      $.identifier,
      repeat1(seq('.', choice($.identifier, seq('@', $.identifier))))
    ),

    _jsx_attribute: $ => choice(
      $.jsx_attribute,
      $.jsx_expression
    ),

    jsx_attribute: $ => seq(
      field('name', choice($.identifier, $.jsx_namespace_name)),
      optional(seq(
        '=',
        field('value', $._jsx_attribute_value)
      ))
    ),

    jsx_expression: $ => seq(
      '{',
      optional(choice(
        $.expression,
        $.spread_element,
        seq('...', $.expression),
        seq('ref', choice($.identifier, $.arrow_function, $.function_expression)),
        seq('html', $.expression)
      )),
      '}'
    ),

    _jsx_attribute_value: $ => choice(
      $.string,
      $.jsx_expression,
      $.jsx_element,
      $.jsx_self_closing_element
    ),

    _jsx_child: $ => choice(
      $.jsx_text,
      $.jsx_element,
      $.jsx_self_closing_element,
      $.jsx_expression
    ),

    this: $ => 'this',
    identifier: $ => {
      const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
      const alphanumeric = /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    _reserved_identifier: $ => choice(
      'arguments',
      'await',
      'component',
      'fragment',
      'track',
      'untrack'
    ),

    number: $ => {
      const hex_literal = seq(
        choice('0x', '0X'),
        /[\da-fA-F](_?[\da-fA-F])*/
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
      const exponent_part = seq(choice('e', 'E'), signed_integer);

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        'n'
      );

      const decimal_integer_literal = choice(
        '0',
        seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits)))
      );

      const decimal_literal = choice(
        seq(decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
        seq('.', decimal_digits, optional(exponent_part)),
        seq(decimal_integer_literal, exponent_part),
        decimal_digits
      );

      return token(choice(
        hex_literal,
        decimal_literal,
        binary_literal,
        octal_literal,
        bigint_literal
      ));
    },

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          token.immediate(prec(1, /[^"\\\n]+/)),
          $.escape_sequence
        )),
        '"'
      ),
      seq(
        "'",
        repeat(choice(
          token.immediate(prec(1, /[^'\\\n]+/)),
          $.escape_sequence
        )),
        "'"
      )
    ),

    _type_annotation: $ => seq(
      ':',
      $.type
    ),

    predefined_type: $ => choice(
      'any',
      'number',
      'boolean',
      'string',
      'symbol',
      'void',
      'unknown',
      'never',
      'object'
    ),

    generic_type: $ => seq(
      choice($.identifier, $.nested_type_identifier),
      $.type_arguments
    ),

    type_arguments: $ => seq(
      '<',
      commaSep1($.type),
      optional(','),
      '>'
    ),

    object_type: $ => seq(
      '{',
      commaSep($.property_signature),
      optional(','),
      '}'
    ),

    property_signature: $ => seq(
      optional('readonly'),
      field('name', $.property_name),
      optional('?'),
      $._type_annotation
    ),

    _semicolon: $ => choice($._automatic_semicolon, ';'),
  }
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
